<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.nanotek</groupId>
	<artifactId>solr-pdf-extraction</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<org.junit.version>4.9</org.junit.version>
		<appengine.target.version>1.9.7</appengine.target.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<org.springframework.version>4.3.3.RELEASE</org.springframework.version>
		<org.springframework.batch.version>3.0.7.RELEASE</org.springframework.batch.version>
		<org.springframework.integration.version>4.3.2.RELEASE</org.springframework.integration.version>
		<org.hibernate.version>5.4.12.Final</org.hibernate.version>
		<org.lucene.version>4.8.0</org.lucene.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<junit.platform.version>1.2.0</junit.platform.version>
		<spring.boot.starter.version>2.2.5.RELEASE</spring.boot.starter.version>
		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
		<basedir>.</basedir>
	</properties>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.2.5.RELEASE</version>
	</parent>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>	
		<dependency>
			<groupId>org.apache.pdfbox</groupId>
			<artifactId>pdfbox</artifactId>
			<version>2.0.20</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>14</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<configuration>
					<argLine>
						--illegal-access=permit
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>